@@ -2,3 +2,4 @@ python-dateutil
 xlrd
 requests
 unidecode
+python-io-wrapper
