@@ -12,7 +12,7 @@ setup(name='libhxl',
       author='David Megginson',
       author_email='contact@megginson.com',
       url='http://hxlproject.org',
-      install_requires=['python-dateutil', 'xlrd', 'requests', 'unidecode'],
+      install_requires=['python-dateutil', 'xlrd', 'requests', 'unidecode', 'python-io-wrapper'],
       packages=['hxl'],
       package_data={'hxl': ['*.json']},
       include_package_data=True,
